Fix compatibility with Android 12-14
Regression from: a5f149dfb3879bf1898e14b05084426c000a6bb4

Fixes: #15

Signed-off-by: Andrew Gunnerson <accounts+github@chiller3.com>